# ai-tutor

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  TA_GPT.db  add_users.py  application.py  chatbot.py  gen_SQL_secretkey.py  helpers.py  main.py  railway.toml  requirements.txt
instance/: TA_GPT.db
open_learning_ai_tutor/: LICENSE  README.md  message_tutor_test.py  prompts.py  prompts_test.py  pyproject.toml  pytest.ini  tutor.py
open_learning_ai_tutor/open_learning_ai_tutor/: constants.py  intent_selector.py  intent_selector_test.py  message_tutor.py  tools.py  tutor_test.py  utils.py  utils_test.py
problem_sets/: PSet1_Problems.tex  PSet1_Solutions.tex
src/: embedder.py  init.py  llm.py  retriever.py  test_functions.py
static/: script.js  styles.css
templates/: base.html  chatbot.html  chatbot_clean.html  chatbot_v2.html  login.html  login_page.html
test/: evaluator.py
